@@ -4,7 +4,7 @@
  *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
  *  project.
  *
- *  Copyright (C) 1998-2019 OpenLink Software
+ *  Copyright (C) 1998-2023 OpenLink Software
  *
  *  This project is free software; you can redistribute it and/or modify it
  *  under the terms of the GNU General Public License as published by the
@@ -281,13 +281,13 @@ public class VirtuosoBlob
 	       // we should go from start
 	       //System.out.println ("vb: rewind pos:" + pos + " ofs:" + bh_offset());
 	       rewind();
-//	       init_read_len = new Long ((pos - 1) *
+//	       init_read_len = Long.valueOf ((pos - 1) *
 //		   (dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? -1 : 1));
-	       init_read_len = new Long (pos - 1);
+	       init_read_len = Long.valueOf (pos - 1);
 	     }
 	   else if (pos - 1 > bh_offset ())
-	     init_read_len = new Long (pos - bh_offset() - 1);
-//	     init_read_len = new Long ((pos - bh_offset() - 1) *
+	     init_read_len = Long.valueOf (pos - bh_offset() - 1);
+//	     init_read_len = Long.valueOf ((pos - bh_offset() - 1) *
 //		 (dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? -1 : 1));
 ***/
 	   if (pos - 1 < bh_offset ())
@@ -298,7 +298,7 @@ public class VirtuosoBlob
 	     }
 
 	   if (pos - 1 > bh_offset ())
-	     init_read_len = new Long (pos - bh_offset() - 1);
+	     init_read_len = Long.valueOf (pos - bh_offset() - 1);
 
 
 	   if (init_read_len != null)
@@ -309,15 +309,15 @@ public class VirtuosoBlob
 		 {
 		   // skip the desired number of bytes
 		   Object[] args = new Object[9];
-		   args[0] = new Long(this.bh_current_page);
+		   args[0] = Long.valueOf(this.bh_current_page);
 		   args[1] = init_read_len;
-		   args[2] = new Long(this.bh_position);
-		   args[3] = new Long(this.key_id);
-		   args[4] = new Long(this.frag_no);
-		   args[5] = new Long(this.dir_page);
+		   args[2] = Long.valueOf(this.bh_position);
+		   args[3] = Long.valueOf(this.key_id);
+		   args[4] = Long.valueOf(this.frag_no);
+		   args[5] = Long.valueOf(this.dir_page);
 		   args[6] = this.pages;
-		   args[7] = this.dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? new Long (1) : new Long(0);
-		   args[8] = new Long (this.bh_timestamp);
+		   args[7] = this.dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? Long.valueOf (1) : Long.valueOf(0);
+		   args[8] = Long.valueOf (this.bh_timestamp);
 		   //System.out.println ("vb: init read FUTURE: " + this.bh_current_page + " " + init_read_len + " " + this.bh_position);
 		   VirtuosoFuture future = connection.getFuture(VirtuosoFuture.getdata,args, -1);
 		   curr = future.nextResult();
@@ -366,20 +366,24 @@ public class VirtuosoBlob
 	   ByteArrayOutputStream bo = new ByteArrayOutputStream();
 
 	   openlink.util.Vector curr = null;
+
+           if (this.dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE)
+               length *= 2;
+
 	   synchronized (connection)
 	     {
 	       Object[] args = new Object[9];
-	       args[0] = new Long(this.bh_current_page);
-//	       args[1] = new Long(length *
+	       args[0] = Long.valueOf(this.bh_current_page);
+//	       args[1] = Long.valueOf(length *
 //		       (dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? -1 : 1));
-	       args[1] = new Long(length);
-	       args[2] = new Long(this.bh_position);
-               args[3] = new Long(this.key_id);
-               args[4] = new Long(this.frag_no);
-               args[5] = new Long(this.dir_page);
+	       args[1] = Long.valueOf(length);
+	       args[2] = Long.valueOf(this.bh_position);
+               args[3] = Long.valueOf(this.key_id);
+               args[4] = Long.valueOf(this.frag_no);
+               args[5] = Long.valueOf(this.dir_page);
                args[6] = this.pages;
-	       args[7] = this.dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? new Long (1) : new Long(0);
-	       args[8] = new Long (this.bh_timestamp);
+	       args[7] = this.dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE ? Long.valueOf (1) : Long.valueOf(0);
+	       args[8] = Long.valueOf (this.bh_timestamp);
 	       //System.out.println ("vb: FUTURE: " + this.bh_current_page + " " + length + " " + this.bh_position);
 	       VirtuosoFuture future = connection.getFuture(VirtuosoFuture.getdata,args, -1);
 	       curr = future.nextResult();
@@ -407,7 +411,7 @@ public class VirtuosoBlob
 		 }
 	       else if (val instanceof String)
 		 {
-		   String sval = (String)val;
+                   byte[] sbytes = ((String)val).getBytes("8859_1");
 		   /*
 		   if (dtp == VirtuosoTypes.DV_BLOB_WIDE_HANDLE)
 		     {
@@ -419,8 +423,8 @@ public class VirtuosoBlob
 		   else
 		   */
 		     {
-		       bo.write (sval.getBytes("8859_1"));
-		       this.bh_start_offset += sval.getBytes("8859_1").length;
+		       bo.write (sbytes);
+		       this.bh_start_offset += sbytes.length;
 		       //System.out.println ("vb: read : strlen= " + sval.getBytes("8859_1").length +
 		//	   " bh_start_offset=" + this.bh_start_offset);
 		     }
