@@ -4,7 +4,7 @@
  *  This file is part of the OpenLink Software Virtuoso Open-Source (VOS)
  *  project.
  *
- *  Copyright (C) 1998-2019 OpenLink Software
+ *  Copyright (C) 1998-2023 OpenLink Software
  *
  *  This project is free software; you can redistribute it and/or modify it
  *  under the terms of the GNU General Public License as published by the
@@ -382,7 +382,7 @@ public class VirtuosoXAResource implements XAResource
     private void rpc(VirtuosoConnection connection, int action, Object encodedXid)
         throws XAException {
         Object[] args = new Object[2];
-        args[0] = new Integer(action);
+        args[0] = Integer.valueOf(action);
         args[1] = encodedXid;
 
         try {
